WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148766
WatchpointsOnStructureStubInfo doesn't need to be reference counted
https://bugs.webkit.org/show_bug.cgi?id=148766
Summary
WatchpointsOnStructureStubInfo doesn't need to be reference counted
Filip Pizlo
Reported
2015-09-03 18:13:28 PDT
It doesn't need to be reference counted because the only RefPtr to it is in StructureStubInfo. Therefore, it can be a unique_ptr.
Attachments
the patch
(4.16 KB, patch)
2015-09-03 18:14 PDT
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-09-03 18:14:25 PDT
Created
attachment 260546
[details]
the patch
Saam Barati
Comment 2
2015-09-03 18:16:35 PDT
Comment on
attachment 260546
[details]
the patch r=me
Filip Pizlo
Comment 3
2015-09-03 18:21:15 PDT
Landed in
http://trac.webkit.org/changeset/189328
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug