WatchpointsOnStructureStubInfo doesn't need to be reference counted https://bugs.webkit.org/show_bug.cgi?id=148766

Reviewed by Saam Barati.

It doesn't need to be reference counted because the only RefPtr to it is in
StructureStubInfo. Therefore, it can be a unique_ptr.

* bytecode/StructureStubClearingWatchpoint.cpp:
(JSC::WatchpointsOnStructureStubInfo::addWatchpoint):
(JSC::WatchpointsOnStructureStubInfo::ensureReferenceAndAddWatchpoint):
* bytecode/StructureStubClearingWatchpoint.h:
(JSC::WatchpointsOnStructureStubInfo::WatchpointsOnStructureStubInfo):
(JSC::WatchpointsOnStructureStubInfo::codeBlock):
* bytecode/StructureStubInfo.h:
(JSC::getStructureStubInfoCodeOrigin):



Canonical link: https://commits.webkit.org/166884@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189328 268f45cc-cd09-0410-ab3c-d52691b4dbfc